# super-ide

./: EXTERNAL_INTEGRATION_README.md  IMPLEMENTATION_ROADMAP.md  PHASE2_API_INTEGRATION_REPORT.md  PHASE2_COMPLETE_STATUS_REPORT.md  PHASE3_2_IMPLEMENTATION_PLAN.md  PHASE3_COMPLETE_CELEBRATION.md  PHASE3_FRONTEND_INTEGRATION_REPORT.md  PHASE3_ROADMAP.md  TERMINAL_IMPLEMENTATION_STATUS.md  example_external_usage.rs  static_analysis.sh  super-ide-compilation-progress.md  test_build.sh  verify_phase2_integration.sh  verify_phase3_frontend.sh  workspace.json
shell_output_save/: origin_master_1765122259.txt
super-ide/: .super-ide.json  BACKEND_IMPROVEMENTS_IMPLEMENTATION.md  CLIPPY_IMPROVEMENTS_PROGRESS.md  COLLABORATION_IMPLEMENTATION_COMPLETE.md  COMPLETE_IMPROVEMENTS_REPORT.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  FINAL_CLIPPY_TRANSFORMATION_REPORT.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS_REPORT.md  LEARNING_ENHANCEMENT_SUMMARY.md  LEARNING_IDE_ENHANCEMENT_PLAN.md  LEARNING_IMPLEMENTATION_COMPLETE.md  LEARNING_IMPLEMENTATION_GUIDE.md  LEARNING_TESTING_REPORT.md  PAIN_POINTS_ANALYSIS.md  PAIN_POINTS_FIXED_REPORT.md  PHASE1_IMPLEMENTATION.md  PHASE_3_2_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PROJECT_STATUS_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START_LEARNING_IMPLEMENTATION.md  README.md  REMAINING_IMPROVEMENTS_PLAN.md  REMAINING_IMPROVEMENTS_UPDATED.md  TERMINAL_IMPLEMENTATION.md  ULTIMATE_ENHANCEMENT_REPORT.md  UNWRAP_FIXES_PROGRESS.md  demo.sh  fix_completion_requests.py  simple_terminal_test  simple_terminal_test.rs  start.sh  test_build.sh  test_terminal.rs
super-ide/config/: default.toml  minimal.toml  working.toml
super-ide/demo-workspace/: README.md
super-ide/examples/: terminal_demo.rs
super-ide/frontend/: .npmrc  README.md  build-simple.sh  demo.html  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
super-ide/frontend/src/: App.vue  style.css  types.ts
super-ide/frontend/src/components/: AIAssistant.vue  AICodeIntelligencePanel.vue  AITutorPanel.vue  AdvancedAIAssistant.vue  CodeEditor.vue  CodeTourOverlay.vue  CollaborationPanel.vue  ConceptViewer.vue  FileExplorer.vue  FileTreeNode.vue  GitPanel.vue  InteractiveTutorial.vue  KeyboardShortcutsTrainer.vue  LearningPanel.vue  LearningProgressModal.vue  LearningSettings.vue  SmartSnippets.vue  SnippetEditorModal.vue  TerminalPanel.vue  Toolbar.vue
super-ide/frontend/src/components/collaboration/: CommentModal.vue  CreateLinkModal.vue  CreatePreviewModal.vue  CreateSessionModal.vue  InviteModal.vue  JoinSessionModal.vue
super-ide/frontend/src/stores/: aiStore.ts  collaborationStore.ts  editorStore.ts  fileStore.ts  gitStore.ts  settingsStore.ts  snippetsStore.ts  terminalStore.ts
super-ide/frontend/src/utils/: apiClient.ts
super-ide/src/: lib.rs  main.rs
super-ide/src/ai/: mod.rs
super-ide/src/ai_new/: mod.rs
super-ide/src/api/: mod.rs
super-ide/src/collaboration/: mod.rs
super-ide/src/config/: mod.rs
super-ide/src/core/: mod.rs
super-ide/src/editor/: mod.rs
super-ide/src/file_ops/: mod.rs
super-ide/src/git/: mod.rs
super-ide/src/learning/: mod.rs
super-ide/src/terminal/: mod.rs  ws_handler.rs
super-ide/src/ui/: mod.rs
super-ide/src/ui/web/: index.html
super-ide/src/utils/: event_bus.rs  file_manager.rs  language_tools.rs  mod.rs  performance.rs
