[package]
name = "super-ide"
version = "0.1.0"
edition = "2021"
authors = ["MiniMax Agent"]
description = "Superior Intelligent IDE - AI-powered development environment"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Code parsing and highlighting
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-css = "0.20"

# AI and ML (simplified for demo)
# Note: Full AI features would require model files and proper dependency resolution
# For this demo, we'll implement a mock AI interface

# File system
notify = "6.0"
walkdir = "2.4"
ignore = "0.4"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
regex = "1.10"
glob = "0.3"
lazy_static = "1.4"

# Development tools
temp-env = "0.2"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
dirs = "5.0"
lru = "0.12"

[dev-dependencies]
temp-env = "0.2"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"